@@ -2,6 +2,8 @@ Collapsing Pages Changelog
 
 0.2.1 (2008.05.01)
   * Link now spans the whole dropdown
+  * Now indicates the presence of an additional submenu (doesn't work in IE 6
+    or less)
 
 0.2 (2008.04.30)
   * Now includes the possibility of providing a drop-down menu of pages and
